--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,11 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    
   </head>
   <body>
     <app-root></app-root>
-
+    <script src="https://kit.fontawesome.com/1694914d74.js" crossorigin="anonymous"></script>
     <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/sidebarmenu.js"></script>
